force-app/main/default/objects/Contact/fields/Contact_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Contact_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>