force-app/main/default/objects/Contact/validationRules/First_Name_Blank_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Blank_Value</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name cannot be Null. Please enter the First Name</errorMessage>
</ValidationRule>